# sentiric-sip-signaling-service

./: .dockerignore  .env.docker  .env.example  .env.local.example  .gitignore  .gitmodules  CONTRIBUTING.md  Cargo.toml  Dockerfile  LOGIC.md  Makefile  README.md  TASKS.md  build.rs  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.service.yml  docker-compose.yml  index.js  package-lock.json  package.json
.github/workflows/: docker-publish.yml
scripts/: generate-env.sh  restart-services.sh
src/: app.rs  app_state.rs  config.rs  error.rs  main.rs  redis.rs  state.rs
src/grpc/: client.rs  mod.rs  service.rs
src/rabbitmq/: connection.rs  mod.rs  terminate.rs
src/sip/: ack.rs  bye.rs  call_context.rs  handler.rs  invite.rs  md5.rs  mod.rs  orchestrator.rs  register.rs  responses.rs  utils.rs
src/sip/invite/: handler.rs  mod.rs  orchestrator.rs
