# Cargo.toml
[package]
name = "sentiric-sip-signaling-service"
version = "0.1.1"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full", "sync"] }
tonic = { version = "0.11", features = ["tls", "tls-roots"] }
prost = "0.12"
lapin = "2.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
config = "0.14"
tracing = "0.1"
rand = "0.8"
tokio-util = "0.7"
regex = "1"
dotenvy = "0.15"
once_cell = "1.19"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
rand_distr = "0.4.3"
futures-util = "0.3" # <--- BU SATIR ZATEN MEVCUT, SORUN YOK
lazy_static = "1.4.0"
md5 = "0.8.0"
redis = { version = "0.32", features = ["tokio-rustls-comp"] }

# --- HATA YÖNETİMİ İÇİN KRİTİK BAĞIMLILIKLAR ---
anyhow = "1.0"
thiserror = "1.0"

# --- TLS BAĞIMLILIKLARI ---
rustls = "0.23"
rustls-pemfile = "2.1"
ring = "0.17"

[dependencies.sentiric-contracts]
git = "https://github.com/sentiric/sentiric-contracts.git"
tag = "v1.8.11"