[package]
name = "sentiric-sip-signaling-service"
version = "1.1.0"
edition = "2021"

[dependencies]
# Async & Network
tokio = { version = "1", features = ["full", "sync"] }
tonic = { version = "0.11", features = ["tls", "tls-roots"] }
prost = "0.12"
prost-types = "0.12"
lapin = "2.3" # RabbitMQ
redis = { version = "0.25", features = ["tokio-rustls-comp"] }

# Utils
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
dotenvy = "0.15"
config = "0.14"
rand = "0.8"
uuid = { version = "1.8", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
once_cell = "1.19"
rand_distr = "0.4.3"
futures-util = "0.3"
lazy_static = "1.4.0"
md5 = "0.8.0"

# Security
rustls = "0.23"
rustls-pemfile = "2.1"
ring = "0.17"

# --- CORE LIBRARIES (YENİ) ---
sentiric-sip-core = { git = "https://github.com/sentiric/sentiric-sip-core.git", tag = "v1.0.0" }
sentiric-contracts = { git = "https://github.com/sentiric/sentiric-contracts.git", tag = "v1.13.3" }